[package]
name = "heinlein"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "heinlein"
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
config = "0.13.3"
console = "0.15.7"
directories = "5.0.1"
include_dir = "0.7.3"
serde_json = "1.0.105"
