
[tool.poetry]
name = "heinlein"
version = "0.7.0"
description = ""
authors = ["Patrick Wells <pwells@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
shapely = "^2.0.2"
pandas = "^2.2.0"
appdirs = "^1.4.4"
portalocker = "^2.8.2"
spherical-geometry = "^1.3.1"
dynaconf = "^3.2.4"
cacheout = "^0.16.0"
regions = "^0.8"
sqlalchemy = "^2.0.25"
godata = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


exclude = ["heinlein/config/support/hsc_regions.csv", "heinlein/config/support/**/*.txt"]

[project.optional-dependencies]
develop = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.285",
    "pre-commit>=3.3.3"
]
des = [
    "heinlein-des>=0.1.0"
]
hsc = [
    "heinlein-hsc>=0.1.0"
]
cfht = [
    "heinlein-cfht>=0.1.0"
]
ms = [
    "heinlein-ms>=0.1.0"
]


[project.scripts]
heinlein = "heinlein.entrypoint:delegate_command"


[tool.isort]
profile = "black"

[tool.black]
extend-exclude = '''
(
dev/*
| io/*
)
'''

[tool.ruff]

exclude = [
"dev",
"io",
"test*"
]

