
[tool.poetry]
name = "heinlein"
version = "0.8.0"
description = ""
authors = ["Patrick Wells <pwells@ucdavis.edu>"]
readme = "README.md"
exclude = ["surveys"]


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
shapely = "^2.0.2"
pandas = "^2.2.0"
appdirs = "^1.4.4"
portalocker = "^2.8.2"
spherical-geometry = "^1.3.0"
dynaconf = "^3.2.4"
cacheout = "^0.16.0"
regions = "^0.8"
sqlalchemy = "^2.0.25"
godata = "^0.8.0"
click = "^8.1.7"


[tool.poetry.group.develop.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.14"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
heinlein-des = {path = "datasets/des"}
heinlein-cfht = {path = "datasets/cfht"}
heinlein-ms = {path = "datasets/ms"}
heinlein-hsc = {path = "datasets/hsc"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


exclude = ["heinlein/config/support/hsc_regions.csv", "heinlein/config/support/**/*.txt"]

[project.optional-dependencies]
des = [
    "heinlein-des>=0.1.2"
]
hsc = [
    "heinlein-hsc>=0.1.0"
]
cfht = [
    "heinlein-cfht>=0.1.0"
]
ms = [
    "heinlein-ms>=0.1.0"
]


[tool.poetry.scripts]
heinlein = "heinlein.entrypoint:cli"


[tool.isort]
profile = "black"

[tool.black]
extend-exclude = '''
(
dev/*
| io/*
)
'''

[tool.ruff]

exclude = [
"dev",
"io",
"test*"
]

