[project]
name = "heinlein"
version = "0.10.3"
description = ""
authors = [{name="Patrick Wells", email="patrick@astropatty.com"}]
readme = "README.md"
exclude = ["surveys"]
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.2.0,<3.0",
    "shapely>=2.0.2,<3.0",
    "pandas>=2.2.0,<3.0",
    "appdirs>=1.4.4,<2.0",
    "portalocker>=2.8.2,<3.0",
    "spherical-geometry>=1.3.0,<2.0",
    "dynaconf>=3.2.4,<4.0",
    "cacheout>=0.16.0,<1.0",
    "regions>=0.8,<1.0",
    "sqlalchemy>=2.0.25,<3.0",
    "click>=8.1.7,<9.0",
    "astropy (>=7.0.1,<8.0.0)",
    "pyerfa (>=2.0.1.5,<3.0.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "healpy (>=1.18.0,<2.0.0)"
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::astropy.wcs.FITSFixedWarning"]

[tool.poetry.group.develop.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.14"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.poetry.group.datasets.dependencies]
heinlein-des = {path = "datasets/des"}
heinlein-cfht = {path = "datasets/cfht"}
heinlein-ms = {path = "datasets/ms"}
heinlein-hsc = {path = "datasets/hsc"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


exclude = ["heinlein/config/support/hsc_regions.csv", "heinlein/config/support/**/*.txt"]

[project.optional-dependencies]
des = [
    "heinlein-des>=0.1.2"
]
hsc = [
    "heinlein-hsc>=0.1.0"
]
cfht = [
    "heinlein-cfht>=0.1.0"
]
ms = [
    "heinlein-ms>=0.1.0"
]


[project.scripts]
heinlein = "heinlein.entrypoint:cli"


[tool.isort]
profile = "black"

[tool.black]
extend-exclude = '''
(
dev/*
| io/*
)
'''

[tool.ruff]

exclude = [
"dev",
"io",
"test*"
]
extend-select = ["E501"]
