[tool.poetry]
name = "heinlein_cfht"
version = "0.1.1"
description = ""
authors = ["Patrick Wells <pwells@ucdavis.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
