[project]
name = "heinlein_cfht"
version = "0.3.0"
description = ""
authors = [{name = "Patrick Wells", email = "patrick@astropatty.com"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
