[tool.poetry]
name = "heinlein_des"
version = "0.1.5"
description = "DES plugin for heinlein"
authors = ["Patrick Wells <pwells@ucdavis.edu>"]
readme = "README.md"
packages = [{include = "heinlein_des"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
