[project]
name = "heinlein_hsc"
version = "0.2.1"
description = ""
authors = [{name="Patrick Wells", email="patrick@astropatty.com"}]
readme = "README.md"
packages = [{include = "heinlein_hsc"}]
requires-python = ">=3.10"



[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
