[project]
name = "heinlein-ms"
version = "0.3.0"
description = ""
authors = [{name="Patrick Wells", email="pwells@ucdavis.edu>"}]
readme = "README.md"
packages = [{include = "heinlein_ms"}]
requires-python = ">=3.11"



[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
