[project]
name = "heinlein-ms"
version = "0.2.1"
description = ""
authors = [{name="Patrick Wells", email="pwells@ucdavis.edu>"]
readme = "README.md"
packages = [{include = "heinlein_ms"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.heinlein.dependencies]
heinlein = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
